# NanoNetHub

./: .gitignore  Cargo.toml  README.md  config.toml_template  sqlite.db  sqlite.db-shm  sqlite.db-wal  tls.json
docs/: bug.md
driver_common/: Cargo.toml
driver_common/src/: device_service.rs  lib.rs  utils.rs
migrations/: 20231207131232_init_sql.sql  20231222073559_add_device.sql  20240110034530_init_times.sql  20240403091019_init_user.sql
mqtt_driver/: Cargo.toml
mqtt_driver/src/: lib.rs  mqtt_consumer.rs
nano_net_hub/: Cargo.toml
nano_net_hub/src/: lib.rs  main.rs
nano_net_hub/src/config/: date_format.rs  mod.rs  server_config.rs
nano_net_hub/src/data/: device_data.rs  mod.rs  sqlite_data.rs
nano_net_hub/src/models/: device.rs  icon.rs  mod.rs  user.rs
nano_net_hub/src/models/common/: common_response.rs  page.rs  sqlx_page.rs  user.rs
nano_net_hub/src/models/error/: mod.rs
nano_net_hub/src/models/tls/: product.rs  property.rs
nano_net_hub/src/protocol/: data_event_handler.rs  features_config.rs  mod.rs
nano_net_hub/src/server/: mod.rs  routers.rs  server_config.rs
nano_net_hub/src/server/handler/: base.rs  device_handler.rs  file_handler.rs  icon_handler.rs  mod.rs  product_handler.rs  property_handler.rs  service_handler.rs  user_handler.rs
src/: lib.rs  main.rs
src/config/: database.rs  date_format.rs  mod.rs  option_serialize.rs
src/models/: mod.rs
src/models/common/: mod.rs  page.rs  sqlx_page.rs  user.rs
src/models/error/: mod.rs
src/models/tls/: mod.rs  product.rs  property.rs  service.rs  unit.rs
src/server/: routers.rs
src/server/handler/: mod.rs  product_handler.rs  property_handler.rs  service_handler.rs  unit_handler.rs  user_handler.rs
test/: test.md
web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: deviceApi.ts  iconApi.ts  productApi.ts  productApi.tsx  propertyApi.ts  serviceApi.ts  userAip.ts  userApi.ts
web/src/common/: type_def.ts
web/src/components/: HubLayout.tsx  layout.less
web/src/config/: http.ts
web/src/pages/: Product.tsx  ProductTsl.tsx
web/src/pages/device/: DeviceDetails.tsx  DeviceInfo.tsx  DeviceLogPage.tsx
web/src/pages/icon/: IconPage.tsx
web/src/pages/login/: Login.tsx  login.less
web/src/pages/product/: Product.tsx
web/src/pages/tsl/: EventReport.tsx  ProductTsl.tsx  Properties.tsx  PropertyEdite.tsx  TslService.tsx
web/src/pages/user/: index.tsx
web/src/store/: userInfo.tsx
web/src/types/: api.ts
