[package]
name = "NanoNetHub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite={version = "0.30",features = ["bundled"]}
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features =  ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.18.0"
dotenv="0.15"