[package]
name = "driver_common"
version = "0.1.0"
edition = "2021"
resolver = '2'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1" }
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1"
rand = "0.8"
async-trait = "0.1"