[package]
name = "mqtt_driver"
version = "0.1.0"
edition = "2021"


[dependencies]
rumqttc = { version = "0.23", features = ["default"] }
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
driver_common = { path = "../driver_common" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1" }
#chrono = { version = "0.4" }
tracing = "0.1"