[package]
name = "nano_net_hub"
version = "0.1.0"
edition = "2021"
resolver = '2'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["mqtt", "sqlite_time_series"]
mqtt = ["mqtt_driver"]
sqlite_time_series = []
[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rand = "0.8.5"
toml = "0.8"
driver_common = { path = "../driver_common" }
mqtt_driver = { path = "../mqtt_driver", optional = true }
lazy_static = "1.4.0"
